--- a/templates/rfgr.xml
+++ b/templates/rfgr.xml
@@ -1,5 +1,5 @@
 <templateSet group="rfgr">
-  <template name="rfl" value="/******************************************************************************************************************&#10; * $TITLE$&#10; *****************************************************************************************************************/&#10;$2$" toReformat="false" toShortenFQNames="true">
+  <template name="rfl" value="/******************************************************************************************************************&#10; * $TITLE$&#10; *****************************************************************************************************************/&#10;$2$" description="" toReformat="false" toShortenFQNames="true">
     <variable name="TITLE" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="2" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
